# book-me

./: .env-sample  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  docker-compose_dev.yml
api/: Dockerfile  manage.py  pyproject.toml
api/auth/: models.py  utils.py
api/auth/value_objects/: __init__.py
api/authentication/: admin.py  exceptions.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
api/authentication/migrations/: 0001_initial.py
api/authentication/value_objects/: account_status.py  account_type.py
api/barber/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
api/barber/migrations/: 0001_initial.py
api/core/: asgi.py  settings.py  urls.py  utils.py  validators.py  wsgi.py
api/core/config/: settings.py  utils.py
api/core/configuration/: settings.py
api/customer/: admin.py  apps.py  models.py  serializers.py  utils.py  views.py
api/customer/value_objects/: __init__.py  order_status.py
api/scripts/: run_linters.sh
api/tasks/email_tasks/: email_sending_core.py
api/tasks/image_handling/: resize_image.py
api/websockets/: consumers.py  templates.py  triggers.py  utils.py
api/websockets/consumers/: __init__.py  service_offer.py  service_unavailabilities.py
env_vars/: .env_api-sample  .env_certbot-sample  .env_frontend-sample  .env_proxy-sample  README.md
frontend/: Dockerfile.prod  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/public/: index.html  manifest.json
frontend/src/: App.js
frontend/src/components/: App.js  AppReviews.js  BarberAvailability.js  BarberLandingPage.js  BarberList.js  BarberListItem.js  BarberOfferDescription.js  BarberReviews.js  Blog.js  BlueTextTypography.js  BlueUnderlinedTextTypography.js  BookOrCancelBarberServiceItem.js  BookOrCancelBarberTimeItem.js  CustomerLandingPage.js  CustomerReviews.js  Footer.js  Header.js  ImageWithCustomizableText.js  MainFeaturedPost.js  MarkdownItem.js  MarkdownList.js  RedTextTypography.js  SearchBar.js  Sidebar.js  SignIn.js  SignUp.js  StickyFooter.js
frontend/src/components/modals/: HeaderTextInputTwoButtonsModal.js  (+2 more)
frontend/src/context/: AuthContext.js
frontend/src/pages/: BarberLandingPage.js  BarberOfferPage.js  CustomerLandingPage.js  LoginPage.js  NotFoundPage.js  SignInPage.js  SignUpPage.js  TestPrivatePage.js
frontend/src/usefulCodeChunks/: App.js
frontend/src/utils/: PrivateRoute.js  axiosInstance.js  ordersParser.js  parseDateTimeToDateString.js  parseDateTimeToHourMinuteString.js  serviceTimesGenerator.js  useAxios.js
proxy/: Dockerfile  run.sh
proxy/nginx/: default-ssl.conf.tpl  default.conf.tpl
scripts/: README.md  get_certbot_certificate.sh  get_certbot_certificates.sh  install_deps.sh  renew_certbot_certificate.sh  renew_certbot_certificates.sh
